# Electric-vehicle-detect

./: README.md  电动车检测开发接口说明.docx
ARM 64/: get_key  电动车检测开发接口说明ARM64.docx
ARM 64/arm_env/jsoncpp-1.9.4/lib/: libjsoncpp.so.1.9.4
ARM 64/arm_env/opencv-3.4.1/include/opencv2/: opencv_modules.hpp
ARM 64/arm_env/opencv-3.4.1/lib/: libopencv_calib3d.so.3.4.1  libopencv_highgui.so.3.4  libopencv_ml.so.3.4.1  libopencv_photo.so.3.4  libopencv_videoio.so.3.4.1  libopencv_videostab.so.3.4
ARM 64/arm_env/opencv-3.4.1/share/OpenCV/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
ARM 64/demo/: CMakeLists.txt  lic.lic  utils.cpp
ARM 64/test/: detect  run_make.sh  test_detect.cpp
hi3516/: get_key
hi3516/arm_env/jsoncpp-1.9.4/lib/: libjsoncpp.so.1.9.4
hi3516/arm_env/opencv-3.4.1/include/opencv2/: cvconfig.h
hi3516/arm_env/opencv-3.4.1/lib/: libopencv_core.so.3.4.1  libopencv_imgcodecs.so.3.4.1  libopencv_imgproc.so.3.4.1
hi3516/arm_env/opencv-3.4.1/lib/pkgconfig/: opencv.pc
hi3516/arm_env/opencv-3.4.1/share/OpenCV/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
hi3516/arm_env/qdian/include/qdian/: detect_struct.h  detector.h
hi3516/demo/: electromobile_598.model  lic.lic  run_detect.sh
hi3516/test/: detect  run_make.sh  utils.h
